# rust-sdk

./: .gitignore  Cargo.toml  README.md  client-metadata.json  justfile  release-plz.toml  rust-toolchain.toml
.github/workflows/: ci.yml  release-plz.yml
conformance/: Cargo.toml
crates/rmcp/: CHANGELOG.md  Cargo.toml  README.md
crates/rmcp-macros/: CHANGELOG.md  Cargo.toml  README.md
crates/rmcp-macros/src/: common.rs  lib.rs  prompt.rs  prompt_handler.rs  task_handler.rs  tool.rs  tool_handler.rs  tool_router.rs
crates/rmcp/src/: lib.rs  model.rs  service.rs  task_manager.rs  transport.rs
crates/rmcp/src/handler/: client.rs  server.rs
crates/rmcp/src/handler/server/: common.rs  prompt.rs  router.rs  tool.rs
crates/rmcp/src/handler/server/router/: prompt.rs  tool.rs
crates/rmcp/src/handler/server/router/tool/: tool_traits.rs
crates/rmcp/src/handler/server/wrapper/: json.rs  parameters.rs
crates/rmcp/src/model/: annotated.rs  capabilities.rs  content.rs  elicitation_schema.rs  meta.rs  prompt.rs  resource.rs  serde_impl.rs  task.rs  tool.rs
crates/rmcp/src/service/: client.rs  server.rs  tower.rs
crates/rmcp/src/transport/: async_rw.rs  auth.rs  child_process.rs  common.rs  sink_stream.rs  streamable_http_client.rs  streamable_http_server.rs  worker.rs
crates/rmcp/src/transport/common/: client_side_sse.rs  http_header.rs  server_side_http.rs  unix_socket.rs
crates/rmcp/src/transport/common/reqwest/: streamable_http_client.rs
crates/rmcp/src/transport/streamable_http_server/: session.rs  tower.rs
crates/rmcp/src/transport/streamable_http_server/session/: local.rs  never.rs  store.rs
crates/rmcp/tests/: test_async_rw_codec.rs  test_client_initialization.rs  test_close_connection.rs  test_complex_schema.rs  test_custom_headers.rs  test_custom_request.rs  test_deserialization.rs  test_elicitation.rs  test_inflight_response_drain.rs  test_json_schema_detection.rs  test_logging.rs  test_message_protocol.rs  test_notification.rs  test_progress_subscriber.rs  test_prompt_handler.rs  test_prompt_macros.rs  test_prompt_routers.rs  test_sampling.rs  test_server_initialization.rs  test_sse_concurrent_streams.rs  test_streamable_http_4xx_error_body.rs  test_streamable_http_connection_reuse.rs  test_streamable_http_json_response.rs  test_streamable_http_priming.rs  test_streamable_http_session_store.rs  test_streamable_http_stale_session.rs  test_structured_output.rs  test_task_support_validation.rs  test_tool_builder_methods.rs  test_tool_macro_annotations.rs  test_tool_macros.rs  test_tool_routers.rs  test_unix_socket_transport.rs  test_with_js.rs  test_with_python.rs
crates/rmcp/tests/common/: handlers.rs
crates/rmcp/tests/test_message_schema/: client_json_rpc_message_schema.json  server_json_rpc_message_schema_current.json
docs/: OAUTH_SUPPORT.md
docs/readme/: README.zh-cn.md
examples/: README.md
examples/clients/: Cargo.toml
examples/clients/src/: everything_stdio.rs
examples/rig-integration/: Cargo.toml
examples/servers/: Cargo.toml
examples/servers/src/: calculator_stdio.rs  cimd_auth_streamhttp.rs  complex_auth_streamhttp.rs  counter_streamhttp.rs  elicitation_enum_inference.rs
examples/servers/src/common/: calculator.rs  counter.rs  generic_service.rs  progress_demo.rs
examples/simple-chat-client/: Cargo.toml
examples/transport/: Cargo.toml
examples/transport/src/: named-pipe.rs  unix_socket.rs
examples/transport/src/common/: calculator.rs
examples/wasi/: Cargo.toml
examples/wasi/src/: calculator.rs
