[package]
name = "mcp-conformance"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "conformance-server"
path = "src/bin/server.rs"

[[bin]]
name = "conformance-client"
path = "src/bin/client.rs"

[dependencies]
rmcp-soddygo = { path = "../crates/rmcp", features = [
    "server",
    "client",
    "elicitation",
    "auth",
    "transport-streamable-http-server",
    "transport-streamable-http-client-reqwest",
] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8", features = ["macros"] }
anyhow = "1"
reqwest = { version = "0.13", features = ["json"] }
urlencoding = "2"
url = "2"
p256 = { version = "0.13", features = ["ecdsa"] }
base64 = "0.22"
