[package]
name = "rig-integration"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = { workspace = true }
keywords = { workspace = true }
homepage = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }
publish = false

[dependencies]
rig-core = "0.32.0"
tokio = { version = "1", features = ["full"] }
rmcp = { workspace = true, features = [
    "client",
    "transport-child-process",
    "transport-streamable-http-client-reqwest"
] }
anyhow = "1.0"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
toml = "1.0"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
tracing-appender = "0.2"
