[package]
name = "simple-chat-client"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13.2", features = ["json"] }
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1"
futures = "0.3"
toml = "1.0"
rmcp-soddygo = { workspace = true, features = [
    "client",
    "transport-child-process",
    "transport-streamable-http-client-reqwest"
] }
clap = { version = "4.0", features = ["derive"] }
